@@ -239,7 +239,6 @@ case "$a8_target" in
         OBJS="javanvm/atari_javanvm.o"
         EXEEXT=".mips"
         enable_unalignedwords=no
-        enable_sound=no
         if [[ "$build_os" = "cygwin" ]]; then
             JAVAFLAGS="-classpath '""`cygpath -wp $CLASSPATH`'"
             JAVACFLAGS="-classpath '""`cygpath -wp $CLASSPATH`'"
@@ -543,7 +542,7 @@ if [[ "$WANT_SOUND" = "yes" ]]; then
 
     OBJS="$OBJS pokeysnd.o mzpokeysnd.o remez.o sndsave.o"
 
-    if [[ "$a8_target" != "ps2" -a "$a8_target" != "sdl" ]]; then
+    if [[ "$a8_target" != "ps2" -a "$a8_target" != "sdl" -a "$a8_target" != "javanvm" ]]; then
         case "$a8_host" in
             dos)
                 OBJS="$OBJS dos/sound_dos.o dos/dos_sb.o"
